Adds new content + MediaQuery

--- a/airmaxday.html
+++ b/airmaxday.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Airmax Day&mdash;Justin Andre</title>
+  <link rel="icon" href="img/icon.ico">
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/owlcarousel/owl.carousel.min.css">
@@ -21,7 +22,7 @@
         <a href="index.html#work" class="navlinks"> WORK</a>
       </div>
       <div class="nav-right2">
-        <a href="#" class="navlinks"> CONTACT</a>
+        <a href="#contact" class="navlinks scroll"> CONTACT</a>
       </div>
 
     </aside>
@@ -45,20 +46,20 @@
     <section class="project-research">
       <aside class="research-problem">
         <h3>The Challenge</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Produce motion design by embodying Nike’s style of branding with a mix of my own personal take.</p>
       </aside>
 
       <aside class="research-inspiration">
         <h3>The Inspiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Current design trend of brutalism while still keeping Nike (and my style) together.</p>
       </aside>
       <aside class="research-solution">
         <h3>The Outcome</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Taking each shoe’s unique visual identity and reinterpreting it through motion, type, and visual elements. </p>
       </aside>
       <aside class="research-overview">
         <h3>The Future</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>My technical skills in motion design is still limited. With practice and more experience, I can express my ideas further.</p>
       </aside>
     </section>
 
@@ -94,29 +95,23 @@
         <h3>View More Work</h3>
       </aside>
       <aside class="extras-box1">
-        <article class="extras-image" id="swish-home"></article>
+        <article onclick="location.href='/swish.html'" class="extras-image" id="swish-home"></article>
         <article class="extras-subltitle">
           <h4>Swish</h4>
-          <a href="swish.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box2">
-        <article class="extras-image" id="mposter-bkg"></article>
+        <article onclick="location.href='/movingposters.html'" class="extras-image" id="mposter-bkg"></article>
         <article class="extras-subltitle">
           <h4>Moving Posters</h4>
-          <a href="movingposters.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box3">
-        <article class="extras-image" id="milya-home"></article>
+        <article onclick="location.href='/milya.html'" class="extras-image" id="milya-home"></article>
         <article class="extras-subltitle">
           <h4>Milya</h4>
-          <a href="milya.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
@@ -131,28 +126,35 @@
 
 
   <footer id="contact">
-    <section class="footer-box">
-      <aside class="footer-note">
-        <h6 class="contact-text">
-        Get in touch for collaboration <br>and new
-        oppurtunities.</h6>
-        <a href="#"> <b class="footer-link">justinveneracion11@gmail.com</b></a>
-      </aside>
-      <aside class="footer-contact">
-        <h4 class="contact-text" >Elsewhere</h4>
-        <ul >
-          <li class="footer-elsewhere ">
-            <a class="contact-text" href="#">Instragram</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">Dribbble</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">LinkedIn</a>
-          </li>
-        </ul>
-      </aside>
-    </footer>
+    <content>
+      <section class="footer-box">
+        <aside class="footnote">
+          <blockquote>Get in touch for collaboration
+<br>and new oppurtunities.</blockquote>
+        </aside>
+        <aside class="footcontact">
+          <ul>
+          <li><a class="footerlink" href="mailto:justin.veneracion11@gmail.com?Subject=Hello" target="_top"> JUSTIN.VENERACION11@GMAIL.COM</a></li>
+          <li>+1(647)339-4489</li>
+          </ul>
+        </aside>
+        <aside class="elsewhere">
+          <ul>
+            <li><a class="footerlink" href="https://www.instagram.com/venerism/">INSTAGRAM</a></li>
+            <li><a class="footerlink" href="https://dribbble.com/venerism">DRIBBBLE</a></li>
+            <li><a class="footerlink" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LINKEDIN</a></li>
+          </ul>
+        </aside>
+        <aside class="credit">
+          <ul>
+            <li>DESIGNED+CODED BY ME</li>
+            <li> <a class="footerlink" href="https://github.com/venerism/justinandre">GITHUB</a></li>
+          </ul>
+
+        </aside>
+      </section>
+    </content>
+  </footer>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
