--- a/milya.html
+++ b/milya.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Milya&mdash;Justin Andre</title>
+  <link rel="icon" href="img/icon.ico">
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/owlcarousel/owl.carousel.min.css">
@@ -23,7 +24,7 @@
         <a href="index.html#work" class="nav-links"> WORK</a>
       </div>
       <div class="nav-right2">
-        <a href="#" class="nav-links"> CONTACT</a>
+        <a href="#contact" class="navlinks scroll"> CONTACT</a>
       </div>
 
     </aside>
@@ -46,115 +47,115 @@
     <section class="project-research">
       <aside class="research-problem">
         <h3>The Challenge</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Investigate and find what OFW families’s go through and what they wish for.</p>
       </aside>
 
       <aside class="research-inspiration">
         <h3>The Inspiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Personal experience. Remembering the past experiences I had and what technology could have done to improved my life as a son of a OFW father.</p>
       </aside>
       <aside class="research-solution">
         <h3>The Outcome</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>A concept app that aims to improve family relationships. It also works as a tool to help OFW families keep in track of their financial life.</p>
       </aside>
       <aside class="research-overview">
         <h3>The Future</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Instead of trying to fix several problems, I would have focused more on one issue and solve it more in detail.</p>
       </aside>
     </section>
 
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Research</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-
+        <h4>General Research</h4>
+        <p>Through interviews, I found out the common issues online shoppers find. These issues were then later filtered to which issues reoccur the most.</p>
+        <h4>Information Architecture</h4>
+        <p>From there, features were born based on each problem. An information architecture to map out the features.</p>
+        <h4>Persona</h4>
+        <p>A family persona was created in order to understand the user flow and user journey of the application.</p>
       </aside>
-      <aside class="slider-box"></aside>
-    </section>
-
-    <section class="project-sketch">
-      <aside class="sketch-title">
-        <h2>Sketch & Visual Ideation</h2>
-      </aside>
-      <aside class="sketch-box">
-      </aside>
-      <aside class="sketch-description">
-        <h3>Sketch</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-      </aside>
-      <aside class="sketch-ideation">
-        <h3>Ideation</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-      </aside>
-      <aside class="sketch-itiration">
-        <h3>Itiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+      <aside class="slider-box">
+        <div class="owl-carousel owl-theme">
+          <div class="sw-slider" id="milya-research1"> &nbsp; </div>
+          <div class="sw-slider" id="milya-research2"> &nbsp;</div>
+          <div class="sw-slider" id="milya-research3"> &nbsp; </div>
+        </div>
       </aside>
     </section>
 
-    <section class="brand-identity">
-      <aside class="brand-title">
-        <h1> Brand Identity</h1>
+    <section class="big-window">
+      <aside class="big-window-title">
+        <h2>Sketches to Wireframes</h2>
       </aside>
-      <aside class="brand-box">
+      <aside class="big-window-box">
+        <div class="owl-carousel owl-theme">
+          <div class="sw-sliderlarge" id="milya-sketch"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="milya-wireframe1"> &nbsp; </div>
+        </div>
+      </aside>
+    </section>
+
+    <section class="big-window">
+      <aside class="big-window-title">
+        <h2>Brand Identity</h2>
+      </aside>
+      <aside class="big-window-box">
+        <div class="owl-carousel owl-theme">
+          <div class="sw-sliderlarge" id="milya-branding"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="milya-icons">    &nbsp; </div>
+          <div class="sw-sliderlarge" id="milya-branding"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="milya-branding"> &nbsp; </div>
+        </div>
       </aside>
     </section>
 
     <section class="project-slider">
       <aside class="slider-description">
-        <h3>Sign In & Notifications</h3>
+        <h3>Sign In</h3>
         <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
         <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
 
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
-    <div class="sw-slider" id="sw-orders1"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders2"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders3"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders4"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders5"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders6"> &nbsp; </div>
-    </div>
+          <div class="sw-slider" id="milya-sign1"> &nbsp; </div>
+          <div class="sw-slider" id="milya-sign2"> &nbsp; </div>
+          <div class="sw-slider" id="milya-sign3"> &nbsp; </div>
+          <div class="sw-slider" id="milya-sign4"> &nbsp; </div>
+        </div>
       </aside>
     </section>
 
     <section class="project-slider">
       <aside class="slider-description">
-        <h3>Wishlists</h3>
+        <h3>Family & Moments</h3>
         <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
         <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
 
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
-    <div class="sw-slider" id="sw-orders1"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders2"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders3"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders4"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders5"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders6"> &nbsp; </div>
-    </div>
+          <div class="sw-slider" id="milya-family">  &nbsp; </div>
+          <div class="sw-slider" id="milya-moments"> &nbsp; </div>
+        </div>
       </aside>
     </section>
 
     <section class="project-slider">
       <aside class="slider-description">
-        <h3>Orders</h3>
+        <h3>Messenger</h3>
         <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
         <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
 
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
-    <div class="sw-slider" id="sw-orders1"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders2"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders3"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders4"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders5"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders6"> &nbsp; </div>
-    </div>
+          <div class="sw-slider" id="milya-msg1"> &nbsp; </div>
+          <div class="sw-slider" id="milya-msg2"> &nbsp; </div>
+          <div class="sw-slider" id="milya-msg3"> &nbsp; </div>
+          <div class="sw-slider" id="milya-msg4"> &nbsp; </div>
+          <div class="sw-slider" id="milya-msg5"> &nbsp; </div>
+        </div>
       </aside>
     </section>
 
@@ -166,14 +167,15 @@
 
       </aside>
       <aside class="slider-box">
-    <div class="owl-carousel owl-theme">
-    <div class="sw-slider" id="sw-orders1"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders2"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders3"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders4"> &nbsp; </div>
-    <div class="sw-slider" id="sw-orders5"> &nbsp;</div>
-    <div class="sw-slider" id="sw-orders6"> &nbsp; </div>
-    </div>
+        <div class="owl-carousel owl-theme">
+          <div class="sw-slider" id="milya-wallet1"> &nbsp; </div>
+          <div class="sw-slider" id="milya-wallet2"> &nbsp; </div>
+          <div class="sw-slider" id="milya-wallet3"> &nbsp; </div>
+          <div class="sw-slider" id="milya-wallet4"> &nbsp; </div>
+          <div class="sw-slider" id="milya-wallet5"> &nbsp; </div>
+          <div class="sw-slider" id="milya-wallet6"> &nbsp; </div>
+          <div class="sw-slider" id="milya-wallet7"> &nbsp; </div>
+        </div>
       </aside>
     </section>
 
@@ -183,29 +185,23 @@
         <h3>View More Work</h3>
       </aside>
       <aside class="extras-box1">
-        <article class="extras-image" id="swish-home"></article>
+        <article onclick="location.href='/swish.html'" class="extras-image" id="swish-home"></article>
         <article class="extras-subltitle">
           <h4>Swish</h4>
-          <a href="swish.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box2">
-        <article class="extras-image" id="mposter-bkg"></article>
+        <article onclick="location.href='/movingposters.html'" class="extras-image" id="mposter-bkg"></article>
         <article class="extras-subltitle">
           <h4>Moving Posters</h4>
-          <a href="movingposters.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box3">
-        <article class="extras-image" id="airmaxday-bkg"></article>
+        <article onclick="location.href='/airmaxday.html'" class="extras-image" id="airmaxday-bkg"></article>
         <article class="extras-subltitle">
           <h4>Airmax Day</h4>
-          <a href="airmaxday.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
@@ -216,41 +212,48 @@
 
 
   <div class="scroll-to-top-link">
-  <a href="#top" class="scroll">
+    <a href="#top" class="scroll">
   <img src="../img/arrow.svg" alt="arrow"></a>
   </div>
 
 
   <footer id="contact">
-    <section class="footer-box">
-      <aside class="footer-note">
-        <h6 class="contact-text">
-        Get in touch for collaboration <br>and new
-        oppurtunities.</h6>
-        <a href="#"> <b class="footer-link">justinveneracion11@gmail.com</b></a>
-      </aside>
-      <aside class="footer-contact">
-        <h4 class="contact-text" >Elsewhere</h4>
-        <ul >
-          <li class="footer-elsewhere ">
-            <a class="contact-text" href="#">Instragram</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">Dribbble</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">LinkedIn</a>
-          </li>
-        </ul>
-      </aside>
-    </footer>
+    <content>
+      <section class="footer-box">
+        <aside class="footnote">
+          <blockquote>Get in touch for collaboration
+<br>and new oppurtunities.</blockquote>
+        </aside>
+        <aside class="footcontact">
+          <ul>
+          <li><a class="footerlink" href="mailto:justin.veneracion11@gmail.com?Subject=Hello" target="_top"> JUSTIN.VENERACION11@GMAIL.COM</a></li>
+          <li>+1(647)339-4489</li>
+          </ul>
+        </aside>
+        <aside class="elsewhere">
+          <ul>
+            <li><a class="footerlink" href="https://www.instagram.com/venerism/">INSTAGRAM</a></li>
+            <li><a class="footerlink" href="https://dribbble.com/venerism">DRIBBBLE</a></li>
+            <li><a class="footerlink" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LINKEDIN</a></li>
+          </ul>
+        </aside>
+        <aside class="credit">
+          <ul>
+            <li>DESIGNED+CODED BY ME</li>
+            <li> <a class="footerlink" href="https://github.com/venerism/justinandre">GITHUB</a></li>
+          </ul>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="js/scrollmagic.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>
-    <script src="js/plugin/owl.carousel.min.js"></script>
-    <script src="js/owlcarousel.js" type="text/javascript"></script>
+        </aside>
+      </section>
+    </content>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="js/scrollmagic.js" type="text/javascript"></script>
+  <script src="js/script.js" type="text/javascript"></script>
+  <script src="js/plugin/owl.carousel.min.js"></script>
+  <script src="js/owlcarousel.js" type="text/javascript"></script>
 
 
 </body>
