--- a/movingposters.html
+++ b/movingposters.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Moving Posters&mdash;Justin Andre</title>
+  <link rel="icon" href="img/icon.ico">
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,7 @@
         <a href="index.html#work" class="navlinks"> WORK</a>
       </div>
       <div class="nav-right2">
-        <a href="#" class="navlinks"> CONTACT</a>
+        <a href="#contact" class="navlinks scroll"> CONTACT</a>
       </div>
 
     </aside>
@@ -43,20 +44,21 @@ type, shapes, and motion</h1>
     <section class="project-research">
       <aside class="research-problem">
         <h3>The Challenge</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Develop a contemporary way of communicating myself as a designer.
+</p>
       </aside>
 
       <aside class="research-inspiration">
         <h3>The Inspiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-      </aside>
+        <p>I’ve seen a ton of amazing kinetic typography and motion design on Instagram—and I saw an opportunity to make my own.</p>
+        </aside>
       <aside class="research-solution">
         <h3>The Outcome</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-      </aside>
+        <p>Each visual element, typography, and motion nested within its poster represented each facet of who I am as a designer.</p>
+        </aside>
       <aside class="research-overview">
         <h3>The Future</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>I enjoy making these. I see myself continuing this type of design and uploading it on social media and design websites.</p>
       </aside>
     </section>
 
@@ -76,41 +78,44 @@ type, shapes, and motion</h1>
       <aside class="poster-title">
         <h2>The Posters</h2>
       </aside>
-      <aside class="poster-gallery poster1" id="poster1">
-        <article class="poster-image"></article>
+      <aside class="poster-gallery poster1" >
+        <article class="poster-image" id="poster1"></article>
         <article class="poster-description">
           <h4> 01 - Personal Description</h4>
-          <p> About the Poster</p>
+          <p> Designer,Toronto,Visionary, and Adaptable. 4 words that best represent who I am. the overlay of the bubble signifies my way of finding who I am as a person.</p>
         </article>
       </aside>
-      <aside class="poster-gallery poster2" id="poster2">
-        <article class="poster-image"></article>
+      <aside class="poster-gallery poster2" >
+        <article class="poster-image" id="poster2"></article>
         <article class="poster-description">
           <h4>02 - Design Expertise</h4>
-          <p> About the Poster</p>
+          <p> The repetition of lines and its fluid motion represent my ability to adapt as a designer.</p>
         </article>
       </aside>
-      <aside class="poster-gallery poster3" id="poster3">
-        <article class="poster-image"></article>
+      <aside class="poster-gallery poster3" >
+        <article class="poster-image" id="poster3"></article>
         <article class="poster-description">
           <h4>03 - Mission Statement</h4>
-          <p> About the Poster</p>
+          <p> its entrance and its constant motion going back and forth literally speaks the meaning of the words.</p>
         </article>
       </aside>
-      <aside class="poster-gallery poster4" id="poster4">
-        <article class="poster-image"></article>
+      <aside class="poster-gallery poster4" >
+        <article class="poster-image" id="poster4"></article>
         <article class="poster-description">
           <h4>04 - Vision and Values</h4>
-          <p> About the Poster</p>
+          <p>I see myself who both values structure and playfulness.</p>
         </article>
       </aside>
     </section>
 
-    <section class="brand-identity">
-      <aside class="brand-title">
+    <section class="motion">
+      <aside class="motion-title">
         <h1> Posters in Motion</h1>
       </aside>
-      <aside class="brand-box"></aside>
+      <aside class="motion-box">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/278322382" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+      </aside>
     </section>
 
     <section class="extras">
@@ -118,29 +123,23 @@ type, shapes, and motion</h1>
         <h3>View More Work</h3>
       </aside>
       <aside class="extras-box1">
-        <article class="extras-image" id="swish-home"></article>
+        <article onclick="location.href='/swish.html'" class="extras-image" id="swish-home"></article>
         <article class="extras-subltitle">
           <h4>Swish</h4>
-          <a href="swish.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box2">
-        <article class="extras-image" id="milya-home"></article>
+        <article onclick="location.href='/milya.html'" class="extras-image" id="milya-home"></article>
         <article class="extras-subltitle">
           <h4>Milya</h4>
-          <a href="milya.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box3">
-        <article class="extras-image" id="airmaxday-bkg"></article>
+        <article onclick="location.href='/airmaxday.html'" class="extras-image" id="airmaxday-bkg"></article>
         <article class="extras-subltitle">
           <h4>Airmax Day</h4>
-          <a href="airmaxday.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
@@ -155,34 +154,42 @@ type, shapes, and motion</h1>
 
 
   <footer id="contact">
-    <section class="footer-box">
-      <aside class="footer-note">
-        <h6 class="contact-text">
-        Get in touch for collaboration <br>and new
-        oppurtunities.</h6>
-        <a href="#"> <b class="footer-link">justinveneracion11@gmail.com</b></a>
-      </aside>
-      <aside class="footer-contact">
-        <h4 class="contact-text" >Elsewhere</h4>
-        <ul >
-          <li class="footer-elsewhere ">
-            <a class="contact-text" href="#">Instragram</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">Dribbble</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">LinkedIn</a>
-          </li>
-        </ul>
-      </aside>
-    </footer>
+    <content>
+      <section class="footer-box">
+        <aside class="footnote">
+          <blockquote>Get in touch for collaboration
+<br>and new oppurtunities.</blockquote>
+        </aside>
+        <aside class="footcontact">
+          <ul>
+          <li><a class="footerlink" href="mailto:justin.veneracion11@gmail.com?Subject=Hello" target="_top"> JUSTIN.VENERACION11@GMAIL.COM</a></li>
+          <li>+1(647)339-4489</li>
+          </ul>
+        </aside>
+        <aside class="elsewhere">
+          <ul>
+            <li><a class="footerlink" href="https://www.instagram.com/venerism/">INSTAGRAM</a></li>
+            <li><a class="footerlink" href="https://dribbble.com/venerism">DRIBBBLE</a></li>
+            <li><a class="footerlink" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LINKEDIN</a></li>
+          </ul>
+        </aside>
+        <aside class="credit">
+          <ul>
+            <li>DESIGNED+CODED BY ME</li>
+            <li> <a class="footerlink" href="https://github.com/venerism/justinandre">GITHUB</a></li>
+          </ul>
+
+        </aside>
+      </section>
+    </content>
+  </footer>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
       <script src="js/scrollmagic.js" type="text/javascript"></script>
       <script src="js/script.js" type="text/javascript"></script>
       <script src="js/plugin/owl.carousel.min.js"></script>
+      <script src="https://player.vimeo.com/api/player.js"></script>
 
 </body>
 
