--- a/swish.html
+++ b/swish.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Swish&mdash;Justin Andre</title>
+  <link rel="icon" href="img/icon.ico">
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/owlcarousel/owl.carousel.min.css">
@@ -21,7 +22,7 @@
         <a href="index.html#work" class="navlinks"> WORK</a>
       </div>
       <div class="nav-right2">
-        <a href="#" class="navlinks"> CONTACT</a>
+        <a href="#contact" class="navlinks scroll"> CONTACT</a>
       </div>
 
     </aside>
@@ -45,20 +46,21 @@ everyone wishes for.</h1>
     <section class="project-research">
       <aside class="research-problem">
         <h3>The Challenge</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Improving experiences by solving issues related to online shopping.</p>
       </aside>
 
       <aside class="research-inspiration">
         <h3>The Inspiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>Missing out on sale because I was not notified about it and having a terrible experience returning a purchase online.
+        </p>
       </aside>
       <aside class="research-solution">
         <h3>The Outcome</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>A browser extension and application that complies all your saved items and it’s feature to purchase and return/exchange within the application.</p>
       </aside>
       <aside class="research-overview">
         <h3>The Future</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+        <p>A conceptual design that could potentially be a feature within an existing company like Pinterest.</p>
       </aside>
     </section>
 
@@ -67,11 +69,12 @@ everyone wishes for.</h1>
         <h3>Research</h3>
         <br>
         <h4>Prioritising Solutions</h4>
-        <p>An online shopping experience everyone wishes for.</p>
+        <p>Through interviews, I found out the common issues online shoppers find.
+These issues were then later filtered to which issues reoccur the most.</p>
         <h4>Information Architecture</h4>
-        <p>An online shopping experience everyone wishes for.</p>
+        <p>Through prioritising solutions, an information structure was built. These were categorised based on related information.</p>
         <h4>Userflow</h4>
-        <p>An online shopping experience everyone wishes for. </p>
+        <p>A basic overflow of what a customer goes through when they use the application.</p>
 
       </aside>
       <aside class="slider-box">
@@ -83,31 +86,21 @@ everyone wishes for.</h1>
       </aside>
     </section>
 
-    <section class="project-sketch">
-      <aside class="sketch-title">
-        <h2>From Sketches to Wireframing</h2>
+    <section class="big-window">
+      <aside class="big-window-title">
+        <h2>From Sketches to Wireframes</h2>
       </aside>
-      <aside class="sketch-box">
+      <aside class="big-window-box">
         <div class="owl-carousel owl-theme">
+          <div class="sw-sliderlarge" id="sw-sketch1">    &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-sketch2">    &nbsp; </div>
           <div class="sw-sliderlarge" id="sw-wireframe1"> &nbsp; </div>
-          <div class="sw-sliderlarge" id="sw-wireframe2"> &nbsp;</div>
+          <div class="sw-sliderlarge" id="sw-wireframe2"> &nbsp; </div>
           <div class="sw-sliderlarge" id="sw-wireframe3"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-wireframe4"> &nbsp; </div>
         </div>
       </aside>
-      <aside class="sketch-description">
-        <h3>Sketch</h3>
-        <p>Sketch the screens based on the information architecture. Compiling elements and features per screen</p>
-      </aside>
-      <aside class="sketch-ideation">
-        <h3>Wireframing</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-      </aside>
-      <aside class="sketch-itiration">
-        <h3>Itiration</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-      </aside>
     </section>
-
 
     <section class="brand-identity">
       <aside class="brand-title">
@@ -121,20 +114,19 @@ everyone wishes for.</h1>
         <h3>Mobile: <br>Sign In & Notifications</h3>
         <br>
         <h4>Sign Up</h4>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+<p>A simple on boarding within the sign up provides users what the application does.</p>
         <h4>Notifications</h4>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-
+<p>Users are notified with deals, coupons, sales, if their items are back or out of stock.</p>
       </aside>
       <aside class="slider-box">
         <aside class="am-gallery-box am-gallery1">
           <div class="owl-carousel owl-theme">
             <div class="sw-slider" id="sw-signin1"> &nbsp; </div>
-            <div class="sw-slider" id="sw-signin2"> &nbsp;</div>
+            <div class="sw-slider" id="sw-signin2"> &nbsp; </div>
             <div class="sw-slider" id="sw-signin3"> &nbsp; </div>
-            <div class="sw-slider" id="sw-notif1"> &nbsp;</div>
-            <div class="sw-slider" id="sw-notif2"> &nbsp; </div>
-            <div class="sw-slider" id="sw-notif3"> &nbsp;</div>
+            <div class="sw-slider" id="sw-notif1"> &nbsp;  </div>
+            <div class="sw-slider" id="sw-notif2"> &nbsp;  </div>
+            <div class="sw-slider" id="sw-notif3"> &nbsp;  </div>
             <div class="sw-slider" id="sw-notif4"> &nbsp; </div>
           </div>
 
@@ -144,9 +136,7 @@ everyone wishes for.</h1>
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Mobile: <br>Wishlist</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-
+<p>Creating wish lists makes things neat and organised. Items can be added to the cart straight from the wish lists.</p>
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
@@ -162,9 +152,8 @@ everyone wishes for.</h1>
     <section class="project-slider">
       <aside class="slider-description">
         <h3>Mobile: <br>Cart</h3>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-        <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-
+        <p>Items from different stores can be compiled into one cart. Billing will be separated by store.</p>
+        <p>This way, you don’t have to write your shipping and billing information for every item you purchase.</p>
       </aside>
       <aside class="slider-box">
         <div class="owl-carousel owl-theme">
@@ -200,9 +189,9 @@ everyone wishes for.</h1>
       </aside>
       <aside class="sketch-box">
         <div class="owl-carousel owl-theme">
-          <div class="sw-sliderlarge" id="sw-placeholder"> &nbsp; </div>
-          <div class="sw-sliderlarge" id="sw-placeholder"> &nbsp;</div>
-          <div class="sw-sliderlarge" id="sw-placeholder"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-browser3"> &nbsp; </div>
+          <div class="sw-sliderlarge" id="sw-browser1"> &nbsp;</div>
+          <div class="sw-sliderlarge" id="sw-browser2"> &nbsp; </div>
         </div>
       </aside>
       <aside class="sketch-description">
@@ -224,29 +213,23 @@ everyone wishes for.</h1>
         <h3>View More Work</h3>
       </aside>
       <aside class="extras-box1">
-        <article class="extras-image" id="mposter-bkg"></article>
+        <article onclick="location.href='/movingposters.html'" class="extras-image" id="mposter-bkg"></article>
         <article class="extras-subltitle">
           <h4>Moving Posters</h4>
-          <a href="movingposters.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box2">
-        <article class="extras-image" id="milya-home"></article>
+        <article onclick="location.href='/milya.html'" class="extras-image" id="milya-home"></article>
         <article class="extras-subltitle">
           <h4>Milya</h4>
-          <a href="milya.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
       <aside class="extras-box3">
-        <article class="extras-image" id="airmaxday-bkg"></article>
+        <article onclick="location.href='/airmaxday.html'" class="extras-image" id="airmaxday-bkg"></article>
         <article class="extras-subltitle">
           <h4>Airmax Day</h4>
-          <a href="airmaxday.html">
-          <button class="smallb" type="button" name="button">View Project</button></a>
         </article>
 
       </aside>
@@ -261,27 +244,34 @@ everyone wishes for.</h1>
 
 
   <footer id="contact">
-    <section class="footer-box">
-      <aside class="footer-note">
-        <h6 class="contact-text">
-        Get in touch for collaboration <br>and new
-        oppurtunities.</h6>
-        <a href="#"> <b class="footer-link">justinveneracion11@gmail.com</b></a>
-      </aside>
-      <aside class="footer-contact">
-        <h4 class="contact-text">Elsewhere</h4>
-        <ul>
-          <li class="footer-elsewhere ">
-            <a class="contact-text" href="#">Instragram</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">Dribbble</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">LinkedIn</a>
-          </li>
-        </ul>
-      </aside>
+    <content>
+      <section class="footer-box">
+        <aside class="footnote">
+          <blockquote>Get in touch for collaboration
+<br>and new oppurtunities.</blockquote>
+        </aside>
+        <aside class="footcontact">
+          <ul>
+          <li><a class="footerlink" href="mailto:justin.veneracion11@gmail.com?Subject=Hello" target="_top"> JUSTIN.VENERACION11@GMAIL.COM</a></li>
+          <li>+1(647)339-4489</li>
+          </ul>
+        </aside>
+        <aside class="elsewhere">
+          <ul>
+            <li><a class="footerlink" href="https://www.instagram.com/venerism/">INSTAGRAM</a></li>
+            <li><a class="footerlink" href="https://dribbble.com/venerism">DRIBBBLE</a></li>
+            <li><a class="footerlink" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LINKEDIN</a></li>
+          </ul>
+        </aside>
+        <aside class="credit">
+          <ul>
+            <li>DESIGNED+CODED BY ME</li>
+            <li> <a class="footerlink" href="https://github.com/venerism/justinandre">GITHUB</a></li>
+          </ul>
+
+        </aside>
+      </section>
+    </content>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
