--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Design&mdash;Justin Andre</title>
-
+  <link rel="icon" href="img/icon.ico">
   <link rel="stylesheet" href="/css/master.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,40 +24,39 @@
   <content>
 
     <section class="splash" id="me">
+      <h4>Website Under Construction</h4>
       <aside class="splashbox">
         <h1>Hi my name is Justin. I am digital designer based in Toronto.
         I design interfaces, conceptualize experiences, and animate motion graphics.
       </h1>
-        <a href="/"> LET'S COLLABORATE</a>
+        <!-- <a href="/"> LET'S COLLABORATE</a> -->
       </aside>
     </section>
 
     <section class="about">
       <aside class="biography">
-<h4> About Me</h4>
-<p> My name is Justin Andre Veneracion. I am a graduate of York/Sheridan Design
-   with a passion of digital design focusing on user interface and user experience.
-   My mission is to help kick off big ideas and bring them to life.
-   I believe that design evokes creativity and it shapes human experiences.</p>
+        <h4> About Me</h4>
+        <p> My name is Justin Andre Veneracion. I am a graduate of York/Sheridan Design with a passion of digital design focusing on user interface and user experience. My mission is to help kick off big ideas and bring them to life. I believe that design
+          evokes creativity and it shapes human experiences.</p>
 
       </aside>
       <aside class="experience">
         <h4>Experience</h4>
-      <ul>
-        <b>UI / UX Intern</b>
-        <li>Icon Worldwide</li>
-        <h4>Zurich, Switzerland 2017</h4>
-      </ul>
-      <ul>
-        <b>Junior Designer</b>
-        <li>1Password, Agilebits</li>
-        <h4>Toronto, Canada 2017</h4>
-      </ul>
-      <ul>
-        <b>Graphic Designer</b>
-        <li>Outsitethebox, Balantech</li>
-        <h4>Mississauga, Canada 2016</h4>
-      </ul>
+        <ul>
+          <b>UI / UX Intern</b>
+          <li>Icon Worldwide</li>
+          <h4>Zurich, Switzerland 2017</h4>
+        </ul>
+        <ul>
+          <b>Junior Designer</b>
+          <li>1Password, Agilebits</li>
+          <h4>Toronto, Canada 2017</h4>
+        </ul>
+        <ul>
+          <b>Graphic Designer</b>
+          <li>Outsitethebox, Balantech</li>
+          <h4>Mississauga, Canada 2016</h4>
+        </ul>
       </aside>
       <aside class="expertise">
         <h4>Areas of Expertise</h4>
@@ -79,8 +78,7 @@
         <aside class="project-description">
           <h2>Swish</h2>
           <h4>User Interface / User Exprience</h4>
-          <p>An online shopping experience everyone wishes for.
-            It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+          <p>A shopping mobile and browser extension application that everyone wishes for.</p>
           <a href="swish.html">
             <button class="home" type="button" name="button">
               View Project
@@ -93,7 +91,7 @@
         <aside class="project-description">
           <h2>Moving Posters</h2>
           <h4>Motion Graphics / Typography / Visual Design</h4>
-          <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+          <p>A series of posters in motion each representing my identity as a designer.</p>
           <a href="movingposters.html">
           <button  class="home" type="button" name="button">
             View Project
@@ -106,7 +104,7 @@
         <aside class="project-description">
           <h2>Milya</h2>
           <h4>User Interface / User Exprience</h4>
-          <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
+          <p>A mobile application created for overseas foreign workers (O.F.W) families in the Philippines.</p>
           <a href="milya.html">
           <button class="home"  type="button" name="button">
             View Project
@@ -119,8 +117,8 @@
         <aside class="project-description">
           <h2>Nike Airmax Day</h2>
           <h4>Motion Graphics / Typography / Visual Design</h4>
-          <p>An online shopping experience everyone wishes for. It is a mobile application and a browser extension that gives users a better shopping experience.</p>
-            <a href="airmaxday.html">
+          <p>An exploration of mixing motion,typography and visual elements for Airmax Day.</p>
+          <a href="airmaxday.html">
           <button class="home" type="button" name="button">
             View Project
           </button></a>
@@ -132,33 +130,40 @@
   </content>
 
   <footer id="contact">
-    <section class="footer-box">
-      <aside class="footer-note">
-        <h6 class="contact-text">
-        Get in touch for collaboration <br>and new
-        oppurtunities.</h6>
-        <a href="#"> <b class="footer-link">justinveneracion11@gmail.com</b></a>
-      </aside>
-      <aside class="footer-contact">
-        <h4 class="contact-text" >Elsewhere</h4>
-        <ul >
-          <li class="footer-elsewhere ">
-            <a class="contact-text" href="#">Instragram</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">Dribbble</a>
-          </li>
-          <li class="footer-elsewhere">
-            <a class="contact-text" href="#">LinkedIn</a>
-          </li>
-        </ul>
-      </aside>
-    </footer>
+    <content>
+      <section class="footer-box">
+        <aside class="footnote">
+          <blockquote>Get in touch for collaboration
+<br>and new oppurtunities.</blockquote>
+        </aside>
+        <aside class="footcontact">
+          <ul>
+          <li><a class="footerlink" href="mailto:justin.veneracion11@gmail.com?Subject=Hello" target="_top"> JUSTIN.VENERACION11@GMAIL.COM</a></li>
+          <li>+1(647)339-4489</li>
+          </ul>
+        </aside>
+        <aside class="elsewhere">
+          <ul>
+            <li><a class="footerlink" href="https://www.instagram.com/venerism/">INSTAGRAM</a></li>
+            <li><a class="footerlink" href="https://dribbble.com/venerism">DRIBBBLE</a></li>
+            <li><a class="footerlink" href="https://www.linkedin.com/in/justin-veneracion-3b2b69130/">LINKEDIN</a></li>
+          </ul>
+        </aside>
+        <aside class="credit">
+          <ul>
+            <li>DESIGNED+CODED BY ME</li>
+            <li> <a class="footerlink" href="https://github.com/venerism/justinandre">GITHUB</a></li>
+          </ul>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-<script src="js/scrollmagic.js" type="text/javascript"></script>
-<script src="js/script.js" type="text/javascript"></script>
+        </aside>
+      </section>
+    </content>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="js/scrollmagic.js" type="text/javascript"></script>
+  <script src="js/script.js" type="text/javascript"></script>
 
 </body>
 
